--- a/stylesheets/index.scss
+++ b/stylesheets/index.scss
@@ -3,31 +3,33 @@ $mobileBreakpoint: 640px;
 // contrast between chosen colors between WCAG AA - AAA rating.
 $black: #001021;
 $highlight: #FF474E;
-$white: #F5F5F5;
 $sidebar-blue: #087A87;
+$white: #F5F5F5;
 
 @mixin hamburger {
-    content: "";
-    width: 30px;
-    height: 5px;
     background-color: #FF5A5F;
+    content: "";
     display: block;
-    z-index: 200;
+    height: 5px;
     position: relative;
+    transform: rotate(0deg);
+    transition: all 0.5s;
+    width: 30px;
+    z-index: 200;
 }
 
 body {
-    width: 100%;
-    height: 100%;
-    // Minimum font size for to prevent auto-zoom on mobile devices. 
-    font-size: 16px;
+    background: $white;
+    color: $black;
     // sans-serif fonts are widely considered most accessible to differently abled people.
     font-family: 'Montserrat', sans-serif;
+    // Minimum font size for to prevent auto-zoom on mobile devices. 
+    font-size: 16px;
+    height: 100%;
     margin: 0;
-    padding: 0;
     min-width: 320px;
-    color: $black;
-    background: $white;
+    padding: 0;
+    width: 100%;
 }
 
 a {
@@ -43,126 +45,122 @@ li {
 }
 
 html {
-    width: 100%;
     height: 100%;
+    width: 100%;
 }
 
 header {
-    justify-content: space-between;
     align-items: center;
-    height: $headerHeight;
-    z-index: 100;
-    position: relative;
-    display: flex;
     background: $black;
+    display: flex;
+    height: $headerHeight;
+    justify-content: space-between;
     padding: 0 1em;
+    position: relative;
+    z-index: 100;
 }
 h1 {
     display: none;
 }
 .search__container {
-    width: 85%;
     position: relative;
+    width: 85%;
     i {
         color: $highlight;
         position: absolute;
-        top: 0.35em;
         right: 1em;
+        top: 0.35em;
     }
     input {
-        border: none;
         background: $white;
-        padding: 0.5em;
+        border: none;
         border-radius: 15px;  
-        width: calc(100% - 15px);
         color: $highlight;
         font-weight: bold;
+        padding: 0.5em;
+        width: calc(100% - 15px);
+    }
+}
+.toggle-sidebar {
+    display: none;
+    &:checked {
+        ~ main aside {
+            left: 0;
+        }
+        ~ .toggle-sidebar-label:after {
+            top: -8px;
+            transform: rotate(45deg);
+        }
+        ~ .toggle-sidebar-label:before {
+            top: 7px;
+            transform: rotate(-45deg);
+        }
+    }
+}
+.toggle-sidebar-label {
+    position: absolute;
+    right: 1em;
+    top: 1em;
+    z-index: 200;
+    cursor: pointer;
+    &:before {
+        @include hamburger;
+        margin-bottom: 10px;
+    }
+    &:after{
+        @include hamburger;
     }
 }
 main {
-    width: 100%;
-    height: calc(100% - 50px);
     display: flex;
+    height: calc(100% - 50px);
     position: relative;
-        .toggle-sidebar {
-            display: none;
-            &:checked {
-                ~ aside {
-                    left: 0;
-                }
-                ~ .toggle-sidebar-label:after {
-                    transform: rotate(45deg);
-                    top: -5px;
-                }
-                ~ .toggle-sidebar-label:before {
-                    transform: rotate(-45deg);
-                    top: 10px;
-                }
-            }
-        }
-        .toggle-sidebar-label {
-            position: absolute;
-            top: -35px;
-            right: 1em;
-            z-index: 200;
-            cursor: pointer;
-            &:before {
-                @include hamburger;
-                margin-bottom: 10px;
-                transform: rotate(0deg);
-                transition: all 0.5s;
-            }
-            &:after{
-                @include hamburger;
-                transform: rotate(0deg);
-                transition: all 0.5s;
-            }
-        }
+    overflow: hidden;
+    width: 100%;
     article {            
-        padding: 0 1em;
         background: $white;
         height: 100%;
+        padding: 0 1em;
         width: 100%;
     }
     aside {
+        background: $sidebar-blue;
+        bottom: 0;
+        color: $white;
+        left: 100%;
+        padding: 1em;
         position: absolute;
         right: 0;
         top: 0;
-        bottom: 0;
-        left: 100%;
-        transition: left 2s;
+        transition: left .5s;
         width: 100%;
-        color: $white;
-        padding: 1em;
-        background: $sidebar-blue;
     }
 }
 
 @media screen and (min-width: $mobileBreakpoint + 1) {
     .search__container {
-        width: 30%;
         max-width: 250px;
-        margin-right: 1em;
+        width: 30%;
     }
     h1 {
-        // Some screen readers can shout at users when dealing with capitalized text.
-        text-transform: uppercase;
-        font-weight: 600;
         color: $highlight;
         display: inline;
+        font-weight: 600;
+        // Some screen readers can shout at users when dealing with capitalized text.
+        text-transform: uppercase;
+    }
+    .toggle-sidebar-label {
+        display: none; 
     }
     main { 
-        .toggle-sidebar-label {
-            display: none; 
-        }
         article {
             flex: 1 1 auto;
         }
         aside {
             left: 0;
-            width: 40%;
             max-width: 250px;
             position: relative;
+            width: 40%;
         }
     }
 }
