--- a/stylesheets/index.scss
+++ b/stylesheets/index.scss
@@ -13,9 +13,17 @@ $white: #F5F5F5;
     height: 5px;
     position: relative;
     transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
     transition: all 0.5s;
+    -webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s;
+    -ms-transition: all 0.5s;
+    -o-transition: all 0.5s;
     width: 30px;
-    z-index: 200;
+    z-index: 100;
 }
 
 body {
@@ -57,7 +65,6 @@ header {
     justify-content: space-between;
     padding: 0 1em;
     position: relative;
-    z-index: 100;
 }
 h1 {
     display: none;
@@ -90,19 +97,26 @@ h1 {
         ~ .toggle-sidebar-label:after {
             top: -8px;
             transform: rotate(45deg);
+            -webkit-transform: rotate(45deg);
+            -moz-transform: rotate(45deg);
+            -ms-transform: rotate(45deg);
+            -o-transform: rotate(45deg);
         }
         ~ .toggle-sidebar-label:before {
             top: 7px;
             transform: rotate(-45deg);
+            -webkit-transform: rotate(-45deg);
+            -moz-transform: rotate(-45deg);
+            -ms-transform: rotate(-45deg);
+            -o-transform: rotate(-45deg);
         }
     }
 }
 .toggle-sidebar-label {
+    cursor: pointer;
     position: absolute;
     right: 1em;
     top: 1em;
-    z-index: 200;
-    cursor: pointer;
     &:before {
         @include hamburger;
         margin-bottom: 10px;
@@ -133,6 +147,10 @@ main {
         right: 0;
         top: 0;
         transition: left .5s;
+        -webkit-transition: left .5s;
+        -moz-transition: left .5s;
+        -ms-transition: left .5s;
+        -o-transition: left .5s;
         width: 100%;
     }
 }
